--- a/Frontend/src/components/CoffeAnimation/CoffeAnimation.css
+++ b/Frontend/src/components/CoffeAnimation/CoffeAnimation.css
@@ -6,7 +6,7 @@
   width: 550px;
   margin-left: 0;
   background-color: rgb(246, 207, 207);
-  border-radius: 300px;
+  border-radius: 400px;
 }
 
 .coffeecup {
@@ -191,20 +191,20 @@
 
 .steam {
   position: absolute;
-  top:-85px;
+  top:-60px;
   animation: steam 2s linear infinite;
 }
 
 .steam-2 {
   position: absolute;
-  top:-85px;
+  top:-60px;
   left:40px;
   animation: steam 2s linear infinite;
 }
 
 .steam-3 {
   position: absolute;
-  top:-85px;
+  top:-60px;
   left:80px;
   animation: steam 2s linear infinite;
 }
@@ -316,29 +316,23 @@
 }
 
 .track{
-  zoom: 3.1;
   -moz-transform: scale(3.1);
+  -webkit-transform: scale(3.1);
   transform: scale(3.1);
+  -ms-transform: scale(3.1);
 }
 
 .container {
-  zoom: 0.5;
   -moz-transform: scale(0.5);
+  -ms-transform: scale(0.5);
+  -webkit-transform: scale(0.5);
   transform: scale(0.5);
 }
 
-
 @media only screen and (min-width: 850px) {
   .container {
-    zoom: 0.6;
     -moz-transform: scale(0.6);
+    -webkit-transform: scale(0.6);
     transform: scale(0.6);
-  }
-}
-@media only screen and (min-width: 1250px) {
-  .container {
-    zoom: 0.8;
-    -moz-transform: scale(0.8);
-    transform: scale(0.8);
   }
 }
