--- a/Frontend/src/components/Navbar/Navbar.scss
+++ b/Frontend/src/components/Navbar/Navbar.scss
@@ -25,11 +25,11 @@
 		display: flex;
 		list-style-type: none;
 		gap: 2rem;
-		li {
+		.underline {
 			a {
 				color : $Primary;
 				font-family: $LinksFont;
-				font-size: calc(11px + 0.390625vw);
+				font-size: calc(8px + 0.390625vw);
 				text-decoration: none;
 				letter-spacing: 0.1rem;
 				transition: 0.3s ease-in-out;
@@ -54,6 +54,28 @@
 			.active {
 				color: $Secondary;
 			}
+		}
+		.auth__button {
+			background-color: $Secondary;
+			padding: 10px;
+			border-radius: 5px;
+			color: white;
+			text-decoration: none;
+			font-family: $LinksFont;
+			&:hover {
+				background-color: $Primary;
+				transition: ease-out .2s;
+			}
+		}
+		.login__button {
+			color: black;
+			text-decoration: none;
+			font-family: $LinksFont;
+		}
+		.logout__button {
+			color: black;
+			text-decoration: none;
+			font-family: $LinksFont;
 		}
 	}
 	.mobile-menu-icon {
