--- a/Frontend/src/components/Menu/MenuComponents/MenuItems.css
+++ b/Frontend/src/components/Menu/MenuComponents/MenuItems.css
@@ -67,8 +67,45 @@
 .products__container .item__list .item__column p {
   max-width: 50%;
 }
+.products__container .item__list .item__column h1 {
+  color: #CF7878;
+  font-size: 2rem;
+}
 .products__container .item__list .item__column .item__row {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+.products__container .item__list .item__column .buttons__container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  width: 100%;
+  gap: 0.5rem;
+  margin: 1rem 0;
+}
+.products__container .item__list .item__column .buttons__container .item__button {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 3rem;
+  border: none;
+  background: #CF7878;
+  color: #4D2222;
+  font-family: ComfortaaSB, Arial;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+.products__container .item__list .item__column .buttons__container .item__button:hover {
+  background: #4D2222;
+  color: #CF7878;
+}
+.products__container .item__list .item__column .buttons__container .item__button--add {
+  width: 50%;
+}
+.products__container .item__list .item__column .buttons__container .item__button--remove {
+  width: 50%;
 }/*# sourceMappingURL=MenuItems.css.map */
