--- a/Frontend/src/components/Menu/MenuComponents/MenuItems.scss
+++ b/Frontend/src/components/Menu/MenuComponents/MenuItems.scss
@@ -64,18 +64,51 @@
         p {
           max-width: 50%;
         }
+        h1 {
+          color: $Secondary;
+          font-size: 2rem;
+        }
         .item__row {
           display: flex;
           flex-direction: row;
           justify-content: space-between;
         }
+        .buttons__container {
+          display: flex;
+          flex-direction: row;
+          justify-content: flex-start;
+          width: 100%;
+          gap: 0.5rem;
+          margin: 1rem 0;
+          .item__button {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 3rem;
+            border: none;
+            background: $Secondary;
+            color: $Primary;
+            font-family: $LinksFont;
+            font-size: 1rem;
+            cursor: pointer;
+            transition: 0.3s ease;
+            &:hover {
+              background: $Primary;
+              color: $Secondary;
+            }
+          }
+          .item__button--add {
+            width: 50%;
+          }
+          .item__button--remove {
+            width: 50%;
+          }
+        }
       }
     }
 }
-
-
-  
-
 
 
 @media only screen and (min-width: $tablet) {
