--- a/Frontend/src/components/Menu/MenuComponents/MenuItems.css
+++ b/Frontend/src/components/Menu/MenuComponents/MenuItems.css
@@ -108,4 +108,21 @@
 }
 .products__container .item__list .item__column .buttons__container .item__button--remove {
   width: 50%;
+}
+
+@media only screen and (max-width: 720px) {
+  .products__container .item__column h1 {
+    font-size: 1.5rem !important;
+  }
+  .products__container .item__column h2 {
+    font-size: 1.2rem !important;
+    max-width: 80%;
+  }
+  .products__container .item__column h3 {
+    font-size: 1rem !important;
+  }
+  .products__container .item__column p {
+    max-width: 80% !important;
+    font-size: 0.8rem;
+  }
 }/*# sourceMappingURL=MenuItems.css.map */
